feat: enhance card display and scoring logic

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <button class="new-deck-btn btn" id="new-deck">Shuffle Deck</button>
       <p class="remaining">Remaining Cards: </p>
     </div>
-    <h1>War!</h1>
+    <h1 id="score">War!</h1>
     <p>Computer</p>
     <div class="cards" id="cards">
-        <div></div>
-        <div></div>
+        <div class="card-slot"></div>
+        <div class="card-slot"></div>
     </div>
     <p>Me</p>
     <button class="draw-cards-btn btn" id="draw-cards">Draw</button>
